package no.elhub.auth.model

enum class AuthorizationPartyType {
    ElhubPersonId,
    ElhubSystem,
    GlobalLocationNumber,
    OrganizationNumber,
}
