package no.elhub.auth.model

enum class AuthorizationRequestStatus {
    Accepted,
    Expired,
    Pending,
    Rejected,
}
