package no.elhub.auth.model

enum class RequestType {
    ChangeOfSupplierConfirmation,
}
