@startuml datamodel
left to right direction
'top to bottom direction

' The PartyId is a type that is used to identify a party
' It can be an elhub user Id or a GLN. It is a string because it can be a UUID or a GLN-number
' type PartyId = String

enum AuthorizationGrantStatus {
  Active
  Exhausted
  Expired
  Revoked
}

enum AuthorizationResource {
  MeteringPoint
  Organization
  Person
}

enum PermissionType {
  ChangeOfSupplier
  FullDelegation
  ReadAccess
}

enum AuthorizationDocumentStatus {
  Expired
  Pending
  Rejected
  Signed
}

enum AuthorizationRequestStatus {
  Accepted
  Expired
  Pending
  Rejected
}

' ElhubPersonId is our individual user Id
' An ElhubSystem might be responsible for a change (audit log)
' GLN and OrgNumber can both be used for organizations
enum AuthorizationPartyType {
  ElhubPersonId
  ElhubSystem
  GlobalLocationNumber
  OrganizationNumber
}

enum DocumentType {
  ChangeOfSupplierConfirmation
}

enum RequestType {
  ChangeOfSupplierConfirmation
}

entity AuthorizationGrant {
  id: UUID
  --
  status: AuthorizationGrantStatus
  grantedFor: BigInt, FK→AuthorizationParty
  grantedBy: BigInt, FK→AuthorizationParty
  grantedTo: BigInt, FK→AuthorizationParty
  grantedAt: DateTime
  validFrom: DateTime
  validTo: DateTime
}

' Used to store metadata related to the AuthorizationGrant
entity AuthorizationGrantProperty {
  authorizationGrantId: UUID, FK→AuthorizationGrant
  key: String
  --
  value: String
  createdAt: DateTime
}

entity AuthorizationAuditLog {
  authorizationGrantId: UUID, FK->AuthorizationGrant
  changedAt: DateTime
  --
  changedBy: BigInt, FK→AuthorizationParty
  valueChanged: String
  valueBefore: String
  valueAfter: String
  message: String
}

entity AuthorizationRequest {
  id: UUID
  --
  type: RequestType
  status: AuthorizationRequestStatus
  requestedBy: BigInt, FK→AuthorizationParty
  requestedTo: BigInt, FK→AuthorizationParty
  createdAt: DateTime
  updatedAt: DateTime
  validTo: DateTime
}

entity AuthorizationRequestProperty {
  authorizationRequestId: UUID, FK→AuthorizationRequest
  key: String
  --
  value: String
  createdAt: DateTime
}

' In this model it is assumed that the metadata is stored in the document.
entity AuthorizationDocument {
  id: UUID
  --
  title: String
  type: DocumentType
  file: Blob
  status: AuthorizationDocumentStatus
  requestedBy: BigInt, FK→AuthorizationParty
  requestedTo: BigInt, FK→AuthorizationParty
  createdAt: DateTime
  updatedAt: DateTime
}

entity AuthorizationDocumentProperty {
  authorizationDocumentId: UUID, FK→AuthorizationDocument
  key: String
  --
  value: String
  createdAt: DateTime
}

entity AuthorizationDocumentSignatories {
  authorizationDocumentId: UUID, FK→Document
  requestedTo: BigInt, FK→AuthorizationParty
  --
  signedBy: BigInt, FK→AuthorizationParty
  signedAt: DateTime
}

entity AuthorizationGrantScope {
  authorizationGrantId: UUID, FK→AuthorizationGrant
  authorizationScopeId: BigInt, FK→AuthorizationScope
  --
  createdAt: DateTime
}

entity AuthorizationDocumentScope {
  authorizationDocumentId: UUID, FK→AuthorizationDocument
  authorizationScopeId: BigInt, FK→AuthorizationScope
  --
  createdAt: DateTime
}

entity AuthorizationRequestScope {
  authorizationRequestId: UUID, FK→AuthorizationRequest
  authorizationScopeId: BigInt, FK→AuthorizationScope
  --
  createdAt: DateTime
}

entity AuthorizationScope {
  id: BigSerial
  authorizedResourceType: AuthorizationResource
  authorizedResourceId: String
  permissionType: PermissionType
  --
  createdAt: DateTime
}

entity AuthorizationParty {
  id: BigSerial
  --
  type: AuthorizationPartyType
  descriptor: String
  name: String?
  createdAt: DateTime
}

' Relationships
AuthorizationGrant "1" *-- "0..*" AuthorizationGrantProperty
AuthorizationGrant "0..1" *-- "1..*" AuthorizationGrantScope
AuthorizationGrant "1" *-- "0..*" AuthorizationAuditLog
AuthorizationGrant --> AuthorizationGrantStatus
AuthorizationGrant --> AuthorizationParty
AuthorizationScope --> AuthorizationResource
AuthorizationScope --> PermissionType
AuthorizationScope "1" *-- "0..*" AuthorizationGrantScope
AuthorizationScope "1" *-- "0..*" AuthorizationRequestScope
AuthorizationScope "1" *-- "0..*" AuthorizationDocumentScope
AuthorizationDocument "1" *-- "0..*" AuthorizationDocumentProperty
AuthorizationDocument "1" *-- AuthorizationDocumentSignatories
AuthorizationDocument "1..*" *-- "*" AuthorizationDocumentScope
AuthorizationDocument --> DocumentType
AuthorizationDocument --> AuthorizationDocumentStatus
AuthorizationDocument --> AuthorizationParty
AuthorizationDocumentSignatories -> AuthorizationParty
AuthorizationRequest "1" *-- "0..*" AuthorizationRequestProperty
AuthorizationRequest "1" *-- "1..*" AuthorizationRequestScope
AuthorizationRequest --> RequestType
AuthorizationRequest --> AuthorizationRequestStatus
AuthorizationParty --> AuthorizationPartyType

@enduml
